# Odin-s-Eye

./: .cursorignore  .gitignore  LICENSE  README.md  requirements.txt  setup_tracking_v2.sh
docs/: PROJECT_CONTEXT.md
mot/: TECHNICAL_DOCUMENTATION.md  requirements.txt
mot/docs/: PROJECT_CONTEXT.md
mot/odin_eye_mot/: __init__.py
mot/odin_eye_mot/reid/: __init__.py  dinov2_extractor.py
mot/odin_eye_mot/tracker/: __init__.py  bytetrack.py  kalman_filter.py
mot/scripts/: 00_download_mot20.py  01_track.py  02_narrate.py  03_benchmark.py
mot/tests/: test_tracking_basics.py
odin_eye/tracking/: __init__.py  dam4sam_tracker.py
old/: pyproject.toml  run_scripts.ipynb
old/configs/: custom_botsort.yaml
old/docs/: phase0_offline_setup_v1.md  phase1_2_technical_doc.md
old/legacy/: 06_prepare_wildtrack.py  07_train_wildtrack.py  10_local_tracker.py
old/legacy/osnet_ain/: extractor.py  osnet_ain.py
old/odin_eye/: __init__.py
old/odin_eye/reid/: __init__.py  dinov2_extractor.py
old/odin_eye/tracking/: dam4sam_tracker.py
old/scripts/data_prep/: 01_convert_crowdhuman.py  02_download_cctv_persons.py  04_train_yolo.py  05_download_wildtrack.py
old/scripts/pipeline/: 09_calibration.py  12_benchmark_wildtrack.py
old/scripts/tools/: make_video.py
old/vlm/: 01_zero_shot_qwen.py  02_yolo_qwen.py  03_yolo_vlm_whole_frame.py  04_yolo_qwen_padded.py
scripts/data_prep/: 03_merge_datasets.py
scripts/pipeline/: 09_calibration.py  10_local_tracker_v2.py  11_global_association.py  11_visualize_global.py  12_benchmark_wildtrack.py
(+1 files in other folders)
