[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "odin-eye"
version = "0.1.0"
description = "Odin's Eye — multi-camera WILDTRACK tracking pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["odin_eye*"]
